# prd2tsd

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  VIBE_CODING_RULES.md  alembic.ini  docker-compose.yml  grill-self-review.md  overview.md  prd2tsd.md  prometheus.yml  pyproject.toml  requirements.txt  sync-skills.ps1  tech-stack.yml
.githooks/: post-checkout  post-commit  pre-commit
.github/: copilot-instructions.md
.github/workflows/: backup.yml  ci.yml  deploy-prod.yml
alembic/: env.py
alembic/versions/: 938e6d4dcfd6_init_all_tables.py  a1b2c3d4e5f6_add_block_e_tables.py
app/: __init__.py  main.py  task_manager.py
app/analysis_layer/: __init__.py  agent_graph.py  models.py  tools.py
app/api/: __init__.py  deps.py
app/auth/: __init__.py  deps.py  middleware.py  models.py  permissions.py  token_manager.py
app/batch/: __init__.py  scheduler.py  tasks.py
app/collaboration/: __init__.py  changelog.py  comment.py  models.py  service.py  suggestion.py
app/core/: __init__.py  config.py  connections.py  exceptions.py  llm.py  logger.py
app/document_management/: __init__.py  csv_loader.py  deduplication.py  models.py  preview.py  repository.py  search.py  service.py  storage.py
app/evaluation/: __init__.py  agent_graph.py  models.py  score_calibrator.py  scoring.py  tools.py
app/generation_layer/: __init__.py  agent_graph.py  models.py  tools.py
app/integrations/: __init__.py  webhook.py
app/knowledge_layer/: __init__.py  config.py  graph_store.py  models.py  pipeline.py  vector_store.py
app/llm_gateway/: __init__.py  budget_controller.py  cache.py  config_manager.py  cost_tracker.py  models.py  pricing.py  provider.py  router.py  (+1 more)
contracts/: __init__.py  interfaces.py  models.py
docs/: block-A-infrastructure.md  block-B-knowledge-layer.md  block-C-agent-pipeline.md  block-D-orchestration.md  block-E-enterprise.md  phase-prompts.md
scripts/: check_db_tables.py  check_tables.py  debug_login.py  e2e_test.py  ensure_tables.py  init_db.py  test_neo4j_conn.py
tests/: conftest.py  test_lint.py  test_tech_stack_compliance.py
(+258 files in other folders)
