[project]
name = "prd2tsd"
version = "0.1.0"
description = "PRD to Technical Specification Document Agent System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "redis[hiredis]>=5.0",
    "minio>=7.0",
    "neo4j>=5.0",
    "sentence-transformers>=3.0",
    "pgvector>=0.3.0",
    "httpx",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
    "celery>=5.3.0",
    "transformers>=4.40.0",
    "cohere>=5.0",
    "Pillow>=10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["ANN", "ARG", "B008", "B017", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
